Fix table header alignment

--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -111,6 +111,10 @@
         table {
             font-family: $pingFang;
             width: 100%;
+
+            th {
+                text-align: left;
+            }
         }
 
         :not(pre) {
